https://bugs.webkit.org/show_bug.cgi?id=96688 Put position:fixed elements in their own layers and allow them to create a stacking context -and corresponding- <rdar://problem/11467961>

Reviewed by Simon Fraser.

Source/WebKit/mac:

Enable these settings in WK1 too for consistency.
* WebView/WebView.mm:
(-[WebView _preferencesChanged:]):

Source/WebKit2:

Soon we want pages with fixed positioned elements to be able to be
scrolled by the ScrollingCoordinator. As a part of that work, we have
to composite fixed position elements, and we have to allow those
elements to create a stacking context.
* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea):

LayoutTests:

A few test result differences. These first three tests actually
render differently now.
* platform/mac/fast/block/positioning/016-expected.png:
* platform/mac/fast/block/positioning/016-expected.txt:
* platform/mac/fast/block/positioning/025-expected.png:
* platform/mac/fast/block/positioning/025-expected.txt:
* platform/mac/fast/block/positioning/fixed-position-stacking-context-expected.png: Added.
* platform/mac/fast/block/positioning/fixed-position-stacking-context-expected.txt: Added.

These tests just have different layer trees.
* platform/mac/compositing/geometry/fixed-position-composited-switch-expected.txt: Added.
* platform/mac/compositing/rtl: Added.
* platform/mac/compositing/rtl/rtl-fixed-expected.txt: Added.
* platform/mac/compositing/rtl/rtl-fixed-overflow-expected.txt: Added.



Canonical link: https://commits.webkit.org/114738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128652 268f45cc-cd09-0410-ab3c-d52691b4dbfc